<resources>
    <string name="app_name">Beering</string>

    <string name="list_beers"><![CDATA[List of Beers]]></string>
    <string name="add_beer"><![CDATA[New Beer]]></string>
    <string name="location"><![CDATA[Save Location]]></string>
    <string name="friend_options"><![CDATA[Friends Options]]></string>
    <string name="options"><![CDATA[Options]]></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="search_hint"><![CDATA[Search List]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beer_list">BeerList</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="personal"><![CDATA[Personal]]></string>
    <string name="user_name"><![CDATA[Username]]></string>
    <string name="user_mail"><![CDATA[E-Mail]]></string>
    <string name="settings"><![CDATA[Settings]]></string>
    <string name="address"><![CDATA[IP Address]]></string>
    <string name="port"><![CDATA[Port]]></string>
    <string name="save"><![CDATA[Save]]></string>
    <string name="cancel"><![CDATA[Cancel]]></string>
    <string name="credentials"><![CDATA[com.drinker.credentials]]></string>
    <string name="auto_locate"><![CDATA[Auto Locate]]></string>
    <string name="shop_name"><![CDATA[Shop Name:]]></string>
    <string name="street"><![CDATA[Street:]]></string>
    <string name="city"><![CDATA[City:]]></string>
    <string name="country"><![CDATA[Country:]]></string>
    <string name="number"><![CDATA[Number:]]></string>
    <string name="region"><![CDATA[Region:]]></string>
    <string name="add_friend"><![CDATA[Add Friend]]></string>
    <string name="locate"><![CDATA[Locate]]></string>
    <string name="brand"><![CDATA[Brand]]></string>
    <string name="flavour"><![CDATA[Flavour]]></string>
    <string name="type"><![CDATA[Type]]></string>
    <string name="brewer"><![CDATA[Brewer]]></string>
    <string name="new_mapping"><![CDATA[New Mapping]]></string>
    <string name="save_map"><![CDATA[Save]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_beer">BeerActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_add_beer">AddBeer</string>
    <string name="title_activity_beer_to_location">BeerToLocation</string>
    <string name="title_activity_mapping">MappingActivity</string>
</resources>